WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178847
Unified sources for FEMorphology.cpp seems to break the windows build.
https://bugs.webkit.org/show_bug.cgi?id=178847
Summary
Unified sources for FEMorphology.cpp seems to break the windows build.
Keith Miller
Reported
2017-10-25 21:22:46 PDT
Relevant build error (not really sure what the problem is): C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform/graphics/filters/FEMorphology.cpp(171): error C2079: 'parallelJobs' uses undefined class 'WebCore::ParallelJobs<WebCore::FEMorphology::PlatformApplyParameters>' (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource316.cpp) [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform/graphics/filters/FEMorphology.cpp(171): error C2440: 'initializing': cannot convert from 'initializer list' to 'int' (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource316.cpp) [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform/graphics/filters/FEMorphology.cpp(171): note: The initializer contains too many elements (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource316.cpp) C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform/graphics/filters/FEMorphology.cpp(172): error C2228: left of '.numberOfJobs' must have class/struct/union (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource316.cpp) [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform/graphics/filters/FEMorphology.cpp(172): note: type is 'int' (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource316.cpp) C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform/graphics/filters/FEMorphology.cpp(180): error C2228: left of '.parameter' must have class/struct/union (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource316.cpp) [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform/graphics/filters/FEMorphology.cpp(180): note: type is 'int' (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource316.cpp) C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform/graphics/filters/FEMorphology.cpp(180): error C2530: 'param': references must be initialized (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource316.cpp) [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform/graphics/filters/FEMorphology.cpp(187): error C2228: left of '.execute' must have class/struct/union (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource316.cpp) [C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\home\buildbot\slave\win-release\build\Source\WebCore\platform/graphics/filters/FEMorphology.cpp(187): note: type is 'int' (compiling source file C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource316.cpp)
Attachments
Patch
(2.24 KB, patch)
2018-01-30 01:28 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(4.12 KB, patch)
2018-01-30 02:45 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-01-30 01:24:07 PST
I see different compilation error. I built AppleWin port and WinCairo port.
> Source\WebCore\platform/graphics/filters/SpotLightSource.cpp(45): error C2027: use of undefined type 'WebCore::FilterEffect' > source\webcore\platform\graphics\filters\LightSource.h(41): note: see declaration of 'WebCore::FilterEffect' > Source\WebCore\platform/graphics/filters/SpotLightSource.cpp(45): error C2228: left of '.mapPointFromUserSpaceToBuffer' must have class/struct/union > Source\WebCore\platform/graphics/filters/SpotLightSource.cpp(47): error C2027: use of undefined type 'WebCore::FilterEffect' > source\webcore\platform\graphics\filters\LightSource.h(41): note: see declaration of 'WebCore::FilterEffect' > Source\WebCore\platform/graphics/filters/SpotLightSource.cpp(47): error C2228: left of '.mapPointFromUserSpaceToBuffer' must have class/struct/union
Fujii Hironori
Comment 2
2018-01-30 01:28:43 PST
Created
attachment 332637
[details]
Patch
Fujii Hironori
Comment 3
2018-01-30 02:45:46 PST
Created
attachment 332643
[details]
Patch
Yusuke Suzuki
Comment 4
2018-01-30 07:29:56 PST
Comment on
attachment 332643
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2018-01-30 13:55:17 PST
Comment on
attachment 332643
[details]
Patch Clearing flags on attachment: 332643 Committed
r227849
: <
https://trac.webkit.org/changeset/227849
>
WebKit Commit Bot
Comment 6
2018-01-30 13:55:18 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-01-30 13:56:40 PST
<
rdar://problem/37042024
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug