Unified sources for FEMorphology.cpp seems to break the windows build. https://bugs.webkit.org/show_bug.cgi?id=178847

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2018-01-30
Reviewed by Yusuke Suzuki.

Fix a compilation error.
platform/graphics/filters/SpotLightSource.cpp(45): error C2027: use of undefined type 'WebCore::FilterEffect'

No new tests (No behavior change)

* Sources.txt: Removed @no-unify for FEMorphology.cpp.
* platform/graphics/filters/SpotLightSource.cpp: Added #include "FilterEffect.h".

Canonical link: https://commits.webkit.org/198104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227849 268f45cc-cd09-0410-ab3c-d52691b4dbfc